# Njukasino

./: .gitignore  LENCO_FIRESTORE_INTEGRATION.md  TESTING_PLAN.md  cypress.config.ts  cypress_output.txt  eslint.config.js  frontend_test_error.txt  index.html  lint-output.txt  package-lock.json  package.json  render.yaml  smoke_output.txt  tsc_errors.txt  tsc_errors_utf8.txt  tsconfig.app.json  vitest.config.ts  vitest_output.txt
.agent/workflows/: run-tests.md
.claude/: settings.local.json
backend/njuka-webapp-backend/: .coverage  auth.py  main.py  pyproject.toml  requirements.txt  test_output.txt
backend/njuka-webapp-backend/routers/: payments.py
backend/njuka-webapp-backend/services/: lipila.py
backend/njuka-webapp-backend/tests/: conftest.py  test_api.py  test_game_logic.py  test_game_quit.py  test_winnings.py
clerk-react/: package-lock.json
cypress/: tsconfig.json
cypress/e2e/: admin-wallet.cy.ts  game-loop.cy.ts  game-quit.cy.ts  multiplayer_join.cy.ts  page-persistence.cy.ts  page-refresh-persistence.cy.ts  portrait-view.cy.ts  smoke.cy.ts
cypress/support/: commands.ts
src/: .stylelintrc.js  App.css  App.tsx  page.tsx  setupTests.ts
src/components/: AnimatedCard.tsx  CPUGamePage.tsx  Card.tsx  EnhancedBottomMenu.tsx  GameOverModal.css  GameOverModal.tsx  GameTable.css  GameTable.tsx  HomePage.tsx  InsufficientFundsModal.tsx  LoadingOverlay.tsx  MultiplayerPage.tsx  SelectionChips.tsx  TutorialModal.css  TutorialModal.tsx  WalletDepositForm.tsx  WalletDisplay.css  WalletDisplay.tsx  WalletWithdrawForm.tsx
tests/: test_multiplayer.py
(+37 files in other folders)
