[tool.poetry]
name = "njuka-backend"
version = "0.1.0"
description = "Njuka game backend"
authors = ["Your Name <your@email.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.110.0"
uvicorn = "^0.29.0"
psycopg2-binary = "^2.9.11"
sqlalchemy = "^2.0.43"
python-dotenv = "^1.2.1"
pydantic-settings = "^2.12.0"
clerk-backend-api = "^4.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"