[tool.poetry]
name = "njuka-backend"
version = "0.1.0"
description = "Njuka game backend"
authors = ["Your Name <your@email.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = "^0.29.0"
python-dotenv = "^1.2.1"
firebase-admin = "^7.1.0"
httpx = "^0.27.0"
pydantic = "^2.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"